--- a/src/app/dashboard/live-demands/live-demands.component.html
+++ b/src/app/dashboard/live-demands/live-demands.component.html
@@ -25,7 +25,7 @@
         <div class="col-3"><p class="px-3">{{row.ppe}}</p></div>
         <div class="col-2"><p class="px-3">{{row.location}}</p></div>
         <div class="col-2"><p class="px-3">{{row.requiredBy}}</p></div>
-        <div class="col-3"><button type="button" class="mk-btn-primary mx-auto w-100">Submit</button></div>
+        <div class="col-3"><button type="button" class="mk-btn-primary mx-auto w-100"  [routerLink]="'/submitbid'" >Submit</button></div>
       </div>
     </div>
     <!-- Desktop view ends -->
