--- a/src/app/dashboard/submit-bid/submit-bid.component.html
+++ b/src/app/dashboard/submit-bid/submit-bid.component.html
@@ -1,4 +1,4 @@
-<div class="needppe">
+ <div class="needppe">
   <ncov-dialog></ncov-dialog>
   <div class="container-fluid no-padding">
     <div class="row mb-5">
@@ -9,87 +9,62 @@
         </div>
       </div>
     </div>
+
     <div class="mk-form__form pb-5">
-      <form [formGroup]="needppeForm">
-        <div formGroupName="materialsRequired">
+      <form [formGroup]="submitbidForm">
+        <pre>{{submitbidForm.value | json }}</pre>
+
+        <div class="form-group formStyle  p-5 mb-5 firstCard">
+          <label for="state">Hospital Details</label>
+          <p> Name:<span class="ml-3">{{data.requestorDetails[0].name}}</span></p> 
+          <p> Organisation:<span class="ml-3">{{data.hospitalNgo}}</span></p> 
+          <p> City:<span class="ml-3">{{data.city}}</span></p> 
+          <p> Date by which PPE is required:<span class="ml-3">{{data.needBy | date: 'dd/mm/yyyy'}}</span></p> 
+          <p> Only certified PPE required:<span class="ml-3">{{data.certifiedPpe}}</span></p> 
+         </div>
+      
+        <div formGroupName="ppes">
           <div class="form-group formStyle p-5 mb-5 firstCard">
-            <label class="mk-required" for="PPE">What Do You Need</label>
-            <div *ngFor="let ppe of needppeForm.controls.materialsRequired['controls']; let i = index " [formGroupName]="i">
-              <div class="row" *ngIf="ppeList[i].ppe !== 'Others'">
+            <label class="mk-required" for="PPE">Submit Bid</label>
+            <div *ngFor="let ppe of submitbidForm.controls.ppes['controls']; let i = index " [formGroupName]="i">
+              <div class="row" >
                 <div class="form-check col-lg-8 col-md-6 mt-2 mb-2 checkbox">
                   <label class="mk-checkbox-container pt-3" for="defaultCheck{{i}}">
-                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe" (change)="onTogglePpe(i)" >
+                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="newList[i].ppeName" (change)="onTogglePpe(i)" >
                     <i class="checkmark mt-3"></i>
-                    {{ppeList[i].ppe}}
+                    {{ppeList[i]?.ppe}}
                   </label>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <label>
-                    <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].required" >
+                    <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="newList[i].ppeCost" >
                   </label>
-                </div>
-              </div>
-              <div class="row" *ngIf="ppeList[i].ppe === 'Others'">
-                <div class="form-check col-lg-4 col-md-6 mt-2 mb-2 checkbox">
-                  <label class="mk-checkbox-container pt-3" for="defaultCheck{{i}}">
-                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe" (change)="onTogglePpe(i)">
-                    <i class="checkmark mt-3"></i>
-                    {{ppeList[i].ppe}}
-                  </label>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
-                  <input ncovAlphaNumeric type="text" class="form-control no-border w-100" placeholder="Other PPE Item" [formControlName]="ppeList[i].otherPpe" (change)="onTogglePpe(i)" >
-                </div>
-                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4 ml-md-auto">
-                  <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].required">
                 </div>
               </div>
             </div>
-            <small *ngIf="!ppeItemSelected" class="text-danger d-block">Please select atleast one PPE item</small>
             <button type="button" (click)="toggleAdd($event.target)" class="mk-btn-sm mk-btn-primary px-3 px-md-4 mt-5">Add</button>
           </div>
         </div>
 
-        <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label class="mk-required" for="state">This PPE is requested by?</label>
-          <select class="mk-select" formControlName="hospitalNgo" id="hospitalNgo" >
-            <option class="mk-select-option" *ngFor="let organisation of organisations" [value]="organisation">{{organisation}}</option>
-          </select>
-        </div>
-
-          <!-- home made -->
-          <div class="form-group formStyle p-5 mt-md-5 mb-5">
-            <label class="mk-required" for="homemade PPE">Are You Willing to Accept HomeMade or Uncertified PPE</label>
+           <div class="form-group formStyle p-5 mt-md-5 mb-5">
+            <label class="mk-required" for="logistics PPE">Do You need MedKonnect to help you with Logistics?</label>
             <div class="px-3 px-md-4 mt-md-5 mt-2">
-              <label class="mk-required" for="homeMade_true" class="mk-radio-yes mk-radio-container" >
-                <input type="radio" id="homeMade_true" value="true" formControlName="certifiedPpe">
+              <label class="mk-required" for="logistics" class="mk-radio-yes mk-radio-container" >
+                <input type="radio" id="logistics" value="true" formControlName="logistics">
                 <i class="radiomark"></i>
                 Yes
               </label>
-              <label class="mk-required" for="homeMade_false" class="mk-radio-no mk-radio-container">
-                <input type="radio" id="homeMade_false" value="false" formControlName="certifiedPpe">
+              <label class="mk-required" for="logistics_false" class="mk-radio-no mk-radio-container">
+                <input type="radio" id="logistics" value="false" formControlName="logistics">
                 <i class="radiomark"></i>
                 No
               </label>
             </div>
-          </div>
-          <!-- home made ends -->
+          </div> 
 
-          <div class="form-group formStyle p-5 mt-md-5 mb-5">
-            <label class="mk-required pl-sm-2" for="InputName">Date by which PPE is Required</label>
-            <input ncovAlphaNumeric id="InputDate" type="date" class="form-control mt-md-5 mt-2 no-border" aria-describedby="Yourname"
-              placeholder="date" formControlName="needBy">
-            <small class="text-danger" *ngIf="needppeForm.controls.needBy.touched && needppeForm.controls.needBy.errors?.required">This is a required field</small>
-          </div>
-            
+
         <div class="form-submit">
-          <div class="terms-condition">
-            <label class="mk-checkbox-container pt-3" for="termsCondition">
-              <input id="termsCondition" type="checkbox" formControlName="tnc" >
-              <i class="checkmark mt-3"></i>
-              I have read and accepted the <span [routerLink]="'/tnc'" class="mk-terms">Terms and Conditions</span>
-            </label>
-          </div>
+         
           <div class="email-copy-text mt-3">
             <small class="font-weight-bold">
               Medkonnect does not give any quality assurance to the consumers and shall not be liable for any defects arising out of non-compliance of,
@@ -101,10 +76,9 @@
             <small>A copy of your responses will be emailed to the address you provided.</small>
           </div>
           <button type="submit" class="mk-btn-primary px-3 px-md-4 mt-5"
-            (click)="onSubmit()" [disabled]="!needppeForm.valid || !needppeForm.controls.tnc.value" >Submit</button>
+            (click)="onSubmit()" [disabled]="!submitbidForm.valid ">Submit</button>
         </div>
       </form>
     </div>
   </div>
-</div>
-
+</div> 
