profile section built

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,12 +26,12 @@
           <li class="nav-item mb-3">
             <a class="nav-link" id="personal-details-tab" data-toggle="tab" href="#personal" role="tab" aria-controls="Personal" aria-selected="true">Personal Details</a>
           </li>
-          <li class="nav-item mb-3">
+          <!-- <li class="nav-item mb-3">
             <a class="nav-link" id="request-history-tab" data-toggle="tab" href="#requesthistory" role="tab" aria-controls="profile" aria-selected="false">Request History</a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" id="supply-history-tab" data-toggle="tab" href="#supplyhistory" role="tab" aria-controls="contact" aria-selected="false">Supply History</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" id="notifications-tab" data-toggle="tab" href="#notifications" role="tab" aria-controls="contact" aria-selected="false">Latest Updates</a>
           </li>
@@ -72,6 +72,9 @@
 <div class="tab-pane fade" id="personal" role="tabpanel" aria-labelledby="profile-tab">
 <ncov-personal-details></ncov-personal-details>
 </div>
+<div class="tab-pane fade" id="notifications" role="tabpanel" aria-labelledby="notifications-tab">
+  Coming Soon!
+  </div>
 <!-- <div class="tab-pane fade" id="requesthistory" role="tabpanel" aria-labelledby="contact-tab">
 <h2>Request History</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
@@ -92,6 +95,7 @@
 <div class="d-block d-lg-none">
   <ncov-footer></ncov-footer>
 </div>
+
 </div>
 
 
