--- a/src/app/dashboard/personal-details/personal-details.component.html
+++ b/src/app/dashboard/personal-details/personal-details.component.html
@@ -4,15 +4,22 @@
       <span class="navbar-brand pl-md-3 pl-2">Personal Details</span>
     </nav>
     <div class="mt-5">
-      <p>FULL NAME</p>
-      <p></p>
-      <p>Email: <span>{{personalData.email}}</span></p>
-      <p>City: <span>{{personalData.city}}</span></p>
-      <p>State: <span>{{personalData.state}}</span></p>
-      <p>Address: <span>{{personalData.address}}</span></p>
-      <p>Pin Code: <span>{{personalData.pin_code}}</span></p>
-      <p>Phone number: <span>{{personalData.phone_no}}</span></p>
-      <p>Company Registration Number: <span>{{personalData.company_registration_number}}</span></p>
+      <p class="profileHeading ml-3">FULL NAME</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.name}}</p>
+      <p class="profileHeading ml-3">Email</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.email}}</p>
+      <p class="profileHeading ml-3">City</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.city}}</p>
+      <p class="profileHeading ml-3">State</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.state}}</p>
+      <p class="profileHeading ml-3">Address</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.address}}</p>
+      <p class="profileHeading ml-3">Pin Code</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.pin_code}}</p>
+      <p class="profileHeading ml-3">Phone number</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.phone_no}}</p>
+      <p class="profileHeading ml-3">Company Registration Number</p>
+      <p class="profileDetails ml-3 w-50 pt-2 pb-2 pl-2 pr-5">{{personalData.company_registration_number}}</p>
     </div>
   </div>
 </div>
