--- a/src/app/dashboard/personal-details/personal-details.component.scss
+++ b/src/app/dashboard/personal-details/personal-details.component.scss
@@ -7,3 +7,22 @@
     font-style: italic;
     font-weight: bold;
 }
+
+.profileHeading{
+    font-family: 'Montserrat-Regular';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 20px;
+}
+
+.profileDetails{
+    border: 1.5px solid #000000;
+box-sizing: border-box;
+box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+font-family: 'Montserrat-Regular';
+font-size: 16px;
+line-height: 20px;
+text-transform: capitalize;
+}
