--- a/src/app/dashboard/submit-bid/submit-bid.component.html
+++ b/src/app/dashboard/submit-bid/submit-bid.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-12 px-0">
         <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100" />
         <div class="carousel-caption">
-          <h1 class="d-none d-sm-block pb-lg-4 headerText header">Please submit your needs here</h1>
+          <h1 class="d-none d-sm-block pb-lg-4 headerText header">Please submit your bids here</h1>
         </div>
       </div>
     </div>
@@ -50,19 +50,19 @@
 
         <div formGroupName="ppes">
           <div class="form-group formStyle p-5 mb-5 firstCard">
-            <label class="mk-required" for="PPE">What Do You Need</label>
+            <label class="mk-required" for="PPE">Submit Bid</label>
             <div *ngFor="let ppe of submitbidForm.controls.ppes['controls']['controls']; let i = index " [formGroupName]="i">
               <div class="row" >
                 <div class="form-check col-lg-8 col-md-6 mt-2 mb-2 checkbox">
                   <label class="mk-checkbox-container pt-3" for="defaultCheck{{i}}">
-                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="newList[i].ppe" (change)="onTogglePpe(i)" >
+                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="newList[i].ppeName" (change)="onTogglePpe(i)" >
                     <i class="checkmark mt-3"></i>
-                    {{newList[i].ppe}}
+                    {{newList[i].ppeName}}
                   </label>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <label>
-                    <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].ppeCost" >
+                    <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="newList[i].ppeCost" >
                   </label>
                 </div>
               </div>
