--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item border-right border-white pr-lg-4 pr-md-2">
-        <a class="header nav-link" href="#" [routerLink]="'/home'">Login</a>
+        <a class="header nav-link" href="#" [routerLink]="'/home'">Login/SignUp</a>
       </li>
       <li class="nav-item border-right border-white pr-lg-4 pl-lg-4 pr-md-2 pl-md-2">
         <a class="nav-link header" href="#" [routerLink]="'/build'">Build</a>
