--- a/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
+++ b/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
@@ -9,7 +9,7 @@
             Your safety is our primary concern. Request the protective equipments you need. We will help actively connect PPE suppliers to your need and ensure you get what you need on time
           </p>
           <div>
-            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal">NEED PPE</button>
+            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal">REQUEST PPE</button>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
             Your safety is our primary concern. Request the protective equipments you need. We will help actively connect PPE suppliers to your need and ensure you get what you need on time
           </p>
           <div>
-            <button class="mk-btn-primary d-block mx-auto" data-toggle="modal" data-target="#getstartedModal" >NEED PPE</button>
+            <button class="mk-btn-primary d-block mx-auto" data-toggle="modal" data-target="#getstartedModal" >REQUEST PPE</button>
           </div>
         </div>
       </div>
