--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -152,14 +152,21 @@
           <div class="form-group formStyle p-5 mt-md-5 mb-5">
             <label class="mk-required pl-sm-2" for="InputName">Date by which PPE is Required</label>
             <input ncovAlphaNumeric id="InputDate" type="date" class="form-control mt-md-5 mt-2 no-border" aria-describedby="Yourname"
-              placeholder="date" formControlName="needBy">
+              placeholder="date" formControlName="needBy" [min]="getToday()">
             <small class="text-danger" *ngIf="needppeForm.controls.needBy.touched && needppeForm.controls.needBy.errors?.required">This is a required field</small>
+          </div>
+
+          <div class="form-group formStyle p-5 mt-md-5 mb-5">
+            <label class="mk-required pl-sm-2" for="InputName">City In which PPE is required</label>
+            <input ncovAlphaNumeric id="InputCity" type="text" class="form-control mt-md-5 mt-2 no-border" aria-describedby="Yourcity"
+              placeholder="City" formControlName="city">
+            <small class="text-danger" *ngIf="needppeForm.controls.city.touched && needppeForm.controls.city.errors?.required">This is a required field</small>
           </div>
             
         <div class="form-submit">
           <div class="terms-condition">
             <label class="mk-checkbox-container pt-3" for="termsCondition">
-              <input id="termsCondition" type="checkbox" formControlName="tnc" >
+              <input id="termsCondition" type="checkbox" formControlName="tnc" value = "false" >
               <i class="checkmark mt-3"></i>
               I have read and accepted the <span [routerLink]="'/tnc'" class="mk-terms">Terms and Conditions</span>
             </label>
