--- a/src/app/tnc/tnc.component.scss
+++ b/src/app/tnc/tnc.component.scss
@@ -13,4 +13,26 @@
       position: relative;
     }
   }
+  .carousel-caption{
+   @include media-breakpoint-up(sm){
+    top: 60%;
+  transform: translateY(-60%);
+  bottom: initial;
+}
+  }
+
+  .item {
+    @include media-breakpoint-up(sm){
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+}
+
+.tncText{
+  font-weight: 600;
+font-size: 18px;
+line-height: 25px;
+text-indent: 3px;
+}
 }
