--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid px-0">
 <div class="row mx-0">
   <div class="col-lg-3 col-lg-3 backgroundNav">
-      <div class="text-center px-3 mt-2 d-flex justify-content-start">
-        <button class="hamburger-btn d-block d-lg-none navbar-toggler mr-3 my-auto" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="text-center px-md-3 mt-2 d-flex justify-content-start">
+        <img src="assets/images/Logo.png" alt="logo"/>
+        <button class="hamburger-btn d-block d-lg-none navbar-toggler mr-3 my-auto ml-auto" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <!-- <span class="hamburger navbar-toggler-icon"></span> -->
           <div class="hamburger">&#9776;</div>
         </button>
-        <img src="assets/images/Logo.png" alt="logo"/>
       </div>
       <div class="border-bottom border-white row pb-3 mb-3">
         <div class="col-4 d-none d-lg-block text-center mt-3">
