--- a/src/app/dashboard/submit-bid/submit-bid.component.html
+++ b/src/app/dashboard/submit-bid/submit-bid.component.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label class="mk-required" for="homemade PPE">Are You Willing to Accept HomeMade or Uncertified PPE</label>
+          <label class="mk-required" for="homemade PPE">Do you need Logistics Support?</label>
           <div class="px-3 px-md-4 mt-md-5 mt-2">
             <label class="mk-required" for="homeMade_true" class="mk-radio-yes mk-radio-container" >
               <input type="radio" id="homeMade_true" value="true" formControlName="logisticsHelp">
