--- a/src/app/haveppe/haveppe.component.scss
+++ b/src/app/haveppe/haveppe.component.scss
@@ -34,3 +34,19 @@
     color: $btn-secondary;
     }
 }
+
+.carousel-caption{
+  @include media-breakpoint-up(sm){
+   top: 60%;
+ transform: translateY(-60%);
+ bottom: initial;
+}
+ }
+
+ .item {
+   @include media-breakpoint-up(sm){
+   -webkit-transform-style: preserve-3d;
+   -moz-transform-style: preserve-3d;
+   transform-style: preserve-3d;
+ }
+ }
