added tnc asset

--- a/src/app/tnc/tnc.component.html
+++ b/src/app/tnc/tnc.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex mb-5 page-header">
     <div class="w-100 px-0 position-relative item">
       <img
-        src="assets/images/about-us-page-header.png"
+        src="assets/images/tnc.png"
         alt="About us"
         class="w-100"
       />
